err/roguehostapd.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/roguehostapd'...
Listing './lib/python3.5/site-packages/roguehostapd/hostapd-2.6'...
Listing './lib/python3.5/site-packages/roguehostapd/hostapd-2.6/hostapd'...
Listing './lib/python3.5/site-packages/roguehostapd/hostapd-2.6/hostapd/logwatch'...
Compiling './lib/python3.5/site-packages/roguehostapd/hostapd-2.6/hostapd/wps-ap-nfc.py'...
***   File "./lib/python3.5/site-packages/roguehostapd/hostapd-2.6/hostapd/wps-ap-nfc.py", line 29
    print txt
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/roguehostapd/hostapd-2.6/src'...
Listing './lib/python3.5/site-packages/roguehostapd/hostapd-2.6/src/ap'...
Listing './lib/python3.5/site-packages/roguehostapd/hostapd-2.6/src/common'...
Listing './lib/python3.5/site-packages/roguehostapd/hostapd-2.6/src/crypto'...
Listing './lib/python3.5/site-packages/roguehostapd/hostapd-2.6/src/drivers'...
Listing './lib/python3.5/site-packages/roguehostapd/hostapd-2.6/src/eap_common'...
Listing './lib/python3.5/site-packages/roguehostapd/hostapd-2.6/src/eap_peer'...
Listing './lib/python3.5/site-packages/roguehostapd/hostapd-2.6/src/eap_server'...
Listing './lib/python3.5/site-packages/roguehostapd/hostapd-2.6/src/eapol_auth'...
Listing './lib/python3.5/site-packages/roguehostapd/hostapd-2.6/src/eapol_supp'...
Listing './lib/python3.5/site-packages/roguehostapd/hostapd-2.6/src/fst'...
Listing './lib/python3.5/site-packages/roguehostapd/hostapd-2.6/src/l2_packet'...
Listing './lib/python3.5/site-packages/roguehostapd/hostapd-2.6/src/p2p'...
Listing './lib/python3.5/site-packages/roguehostapd/hostapd-2.6/src/pae'...
Listing './lib/python3.5/site-packages/roguehostapd/hostapd-2.6/src/radius'...
Listing './lib/python3.5/site-packages/roguehostapd/hostapd-2.6/src/rsn_supp'...
Listing './lib/python3.5/site-packages/roguehostapd/hostapd-2.6/src/tls'...
Listing './lib/python3.5/site-packages/roguehostapd/hostapd-2.6/src/utils'...
Listing './lib/python3.5/site-packages/roguehostapd/hostapd-2.6/src/wps'...
Listing './lib/python3.5/site-packages/roguehostapd-1.1.6.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
